--- a/dss_monocle-gateway/Dockerfile
+++ b/dss_monocle-gateway/Dockerfile
@@ -32,7 +32,7 @@ RUN apk add --no-cache curl
 RUN apk add --no-cache libstdc++
 RUN apk add --no-cache nano
 RUN apk add --no-cache net-tools
-RUN apk add --no-cache openssl
+# RUN apk add --no-cache openssl
 RUN apk add --no-cache ca-certificates
 
 # ---------------------------------------
